<resources>
    <string name="app_name">twoActivities</string>
    <string name="send">Send</string>
    <string name="editText_main">Enter your message here</string>
    <string name="text_header">text_header</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

</resources>